# fullfatsearch

./: .gitignore  README.md  clean.py  config.yaml  datasette.yaml  index.py  pyproject.toml  rag.py  stats.json
.github/workflows/: update.yml
.streamlit/: config.toml
data/: -3lpMmfs5j0.es.md  -C7yPfvHjk0.es.md  -LW0oeOJWSM.es.md  -MOxlvDUETg.es.md  -Vo29hmagT0.es.md  -hzd0k15pmg.es.md  -qDOkGysUGw.es.md  -vJyH32CUdE.es.md  0FOsWvYlA-A.es.md  0KsTs_NiIFE.es.md  0amfpjiSyxM.es.md  0bUzo0Avyp8.es.md  0fZKj3VJKSY.es.md  173aE1m08QI.es.md  20JsEpanrEA.es.md  2A22Oj1nZ-Q.es.md  2DmaIPm1cgQ.es.md  2XV2kAYeJ4g.es.md  2zyYZWIZeU8.es.md  3Au5EldcmUo.es.md  3ExJzDZGa84.es.md  3JD1_f29tqY.es.md  3iFBvVQYPA0.es.md  4PdtqKhC1_Y.es.md  4REOX8jqL4I.es.md  4sPxRTdcDXI.es.md  5EzeW1tdo8Q.es.md  5cvWFcbUonY.es.md  5zFiwX_JsEs.es.md  68p1AJsdhvc.es.md  6UkEHPlejcw.es.md  6bitzKnPwJA.es.md  6dgnIuwsetg.es.md  6qslkuqgpZI.es.md  7O0krv13KSo.es.md  935LgkSZbEg.es.md  97sm6MyEdtQ.es.md  9LusM1Pgl3I.es.md  9MkdDGiTopA.es.md  9q0K7U9o2nM.es.md  (+174 more)
scripts/: vectorize.py
