[project]
name = "fullfatsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.24",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "openai>=1.88.0",
    "openai-agents>=0.0.19",
    "python-frontmatter>=1.1.0",
    "streamlit>=1.45.1",
]
